# datapero-finetuning-llm

./: .gitignore  README.md
dataforge/: .gitignore  README.md  pyproject.toml
dataforge/data/: IPCC_AR6_SYR_FullVolume.txt
dataforge/output/: ipcc.jsonl
dataforge/src/dataforge/: cli.py
dataforge/src/dataforge/octoai/: chat_async.py
dataforge/src/dataforge/prompts/: prompts.py
dataforge/src/dataforge/prompts/data/: qapairs_en.yaml  qapairs_fr.yaml
notebooks/: finetuning_metropole.ipynb  inference_metropole.ipynb  inference_vanilla.ipynb  requirements.txt
notebooks/data/: metropole.jsonl
presentation/: README.md  index.html  presentation.md
